GNOME Bugzilla – Bug 595616
doesn't show tip texts for bookmarks
Last modified: 2009-10-06 15:12:47 UTC
The bug has been opened on https://bugs.launchpad.net/bugs/432485 "Nautilus doesn't show tip texts for bookmarks, where the whole path stands. Places menu does it ("bookmark_tiptext_placesmenu.png"), open dialog does it as well ("bookmark_tiptext_opendialog.png"), but nautilus not ("bookmark_NO_tiptext_nautilus.png")."
Created attachment 144667 [details] [review] First patch to add tooltips Here's a first patch that adds tooltips to the places sidebar. Comments on the strings are very welcome!