Show tooltips in places sidebar

https://bugzilla.gnome.org/show_bug.cgi?id=595616